src/instagram-grid.css
body {
	padding:0;
	margin:0;
}
.insta-block,
.insta-block-large {
	-webkit-background-size: cover; 
	-moz-background-size: cover; 
	-o-background-size: cover; 
	background-size: cover;
	background-position:center center;
}
.insta-block {
	float:left;
	position:relative;
}
.insta-img {
	width:100%;
	height:auto;
	float:left;
	-webkit-transition: 0.2s;
	-moz-transition: 0.2s;
	-ms-transition: 0.2s;
	-o-transition: 0.2s;
	transition: 0.2s;
	-webkit-backface-visibility: hidden;
}
.insta-block-large {
	position:absolute;
	width:600px;
	height:600px;
	left:50%;
	top:50%;
	margin-top:-300px;
	margin-left:-300px;
	border:5px solid #fff;
}
.insta-img.clickable {
	cursor:pointer;
}
.insta-img.clickable:hover {
	opacity:.9;
}
.insta-likes {
	font-family:arial, sans-serif;
	position:absolute;
	left:5px;
	bottom:5px;
	color:#fff;
	font-size:.8em;
	padding:3px 5px;
	background-color:rgba(0,0,0,.5);
	border-radius:3px;
	z-index: 10;
}
.insta-heart {
	width:10px;
	height:auto;
	margin-right:5px;
}
.instagram-cover {
	position:absolute;
	width:100%;
	height:100%;
	background-color:rgba(0,0,0,.8);
}
.insta-block-large-close {
	position:absolute;
	right:5px;
	top:-10px;
	padding:0;
	margin:0;
	color:#fff;
	font-size:3em;
}
.insta-block-large-close:hover {
	cursor:pointer;
	opacity:.8;
}

